# flapp

./: .gitignore  ARCHITECTURE.md  README.md  build-installer.ps1  package.json  skills-lock.json
.claude/: settings.local.json
.design-sync/: NOTES.md  config.json  conventions.md  fonts.css
.design-sync/previews/: Button.tsx  Card.tsx  CategoryTag.tsx  Checkbox.tsx  DropZone.tsx  Icons.tsx  Input.tsx  PlayButton.tsx  ProgressBar.tsx  StatStrip.tsx  Tabs.tsx
backend/: go.mod  go.sum
backend/cmd/bench/: main.go
backend/cmd/dataset-analyzer/: main.go
backend/cmd/flapp-core/: main.go
backend/internal/adapter/http/: handlers.go  midi_handlers.go  server.go  sse.go  youtube_handlers.go
backend/internal/adapter/storage/: analysis_cache.go  analytics.go  collections.go  db.go  driver.go  projects.go  samples.go  samples_search_test.go  schema.go  schema_v2.go
backend/internal/domain/: category.go  job.go  midi.go  ports.go  sample.go
backend/internal/infrastructure/archive/: archive.go  archive_test.go  bombguard.go  export_test.go  nested.go  nested_test.go  packer.go  rar.go  sevenzip.go
backend/internal/infrastructure/audio/: analyzer.go  analyzer_test.go  decode.go  decode_flac.go  decode_mp3.go  decode_ogg.go  duration.go  fft.go  peaks.go  peaks_test.go  spectrogram.go
backend/internal/infrastructure/classify/: classifier.go  classifier_test.go  model.go  model_classifier.go  rules.go
backend/internal/infrastructure/covers/: covers.go  covers_test.go
backend/internal/infrastructure/dedup/: bench_test.go  hasher.go  index.go  index_dedup_test.go  index_test.go  quickhash.go  quickhash_test.go
backend/internal/infrastructure/flp/: edgecases_test.go  parser.go  parser_test.go
backend/internal/infrastructure/format/: detector.go  detector_test.go
backend/internal/infrastructure/jobs/: queue.go  queue_test.go
backend/internal/infrastructure/midi/: categorize.go  categorize_test.go  multitrack.go  multitrack_test.go  parser.go  writer.go  writer_test.go
backend/internal/infrastructure/settings/: settings.go  settings_seo_test.go
backend/internal/infrastructure/tagging/: generator.go
backend/internal/infrastructure/youtube/: defaults.go  ffmpeg.go  hidewindow_other.go  hidewindow_windows.go  oauth.go  tags.go  upload.go
backend/internal/usecase/: analytics.go  beatmanager.go  covers.go  harvest.go  library.go  midi_extract.go  midi_extract_test.go  packbuilder.go  pipeline_test.go  rename_search_test.go  scan.go  smartsearch.go  unresolved.go  unresolved_test.go  youtube.go
docs/superpowers/plans/: 2026-07-16-console-design-foundation.md  2026-07-18-youtube-seo-keywords.md  2026-07-20-native-rewrite-foundation.md
docs/superpowers/specs/: 2026-07-15-auto-author-detection-design.md  2026-07-16-batch-distinct-covers-design.md  2026-07-16-console-design-foundation.md  2026-07-17-per-video-edits-design.md  2026-07-17-unified-overlay-preview-design.md  2026-07-17-youtube-dialog-redesign-design.md  2026-07-18-youtube-seo-keywords-design.md  2026-07-19-pinterest-only-covers-design.md  2026-07-19-terminal-core-redesign-design.md  2026-07-20-decode-unicode-hex-names-design.md  2026-07-20-native-rewrite-foundation-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/app/styles/: base.css  fonts.css  tokens.css
frontend/src/pages/analytics/: AnalyticsPage.tsx
frontend/src/pages/midi/: MidiPianoRoll.tsx  useMidiPlayer.ts
frontend/src/pages/player/: PlayerPage.tsx
frontend/src/pages/samples/: MidiSection.tsx  SamplesPage.tsx
frontend/src/pages/settings/: SettingsPage.tsx
frontend/src/shared/api/: client.ts  events.ts  types.ts
native/: Cargo.toml
native/flapp-app/: Cargo.toml
native/flapp-app/src/: archive.rs  background.rs  classify.rs  dedup.rs  export.rs  flp.rs  main.rs  midi.rs  player.rs  rename.rs  settings.rs  smartsearch.rs  sounds.rs  tabs.rs  theme.rs  util.rs
native/flapp-audio/: Cargo.toml
native/flapp-audio/src/: lib.rs
native/flapp-dsp/: Cargo.toml
native/flapp-dsp/examples/: bench.rs
native/flapp-dsp/src/: lib.rs
scripts/: build-sidecar.ps1  build-sidecar.sh  gen-yt-defaults.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  lib.rs  main.rs  watcher.rs
(+29 files in other folders)
