[package]
name = "flapp"
version = "0.1.0"
description = "Flapp — менеджер сэмплов и звуков для битмейкеров"
authors = ["Flapp"]
edition = "2021"
rust-version = "1.77"

# The library target hosts the app logic; main.rs is a thin entrypoint. This
# layout is what `tauri` expects on mobile and keeps desktop identical.
[lib]
name = "flapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Плеер-аналайзер
# Вариант А (точнее, но требует C-библиотеку): aubio-rs = "0.4"
# Вариант Б (без внешних зависимостей, используется по умолчанию):
symphonia = { version = "0.5", default-features = false, features = [
    "mp3", "flac", "ogg", "aac", "wav", "aiff", "isomp4",
    "symphonia-codec-vorbis", "symphonia-format-ogg",
] }
rustfft   = "6"
ebur128   = "0.1"
rayon     = "1"

[profile.dev]
debug = 0
incremental = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
