[package]
name = "flapp"
version = "0.2.0"
description = "Flapp — менеджер сэмплов и звуков для битмейкеров"
authors = ["Flapp"]
edition = "2021"
rust-version = "1.77"

# The library target hosts the app logic; main.rs is a thin entrypoint. This
# layout is what `tauri` expects on mobile and keeps desktop identical.
[lib]
name = "flapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Плеер-аналайзер
# Вариант А (точнее, но требует C-библиотеку): aubio-rs = "0.4"
# Вариант Б (без внешних зависимостей, используется по умолчанию):
symphonia = { version = "0.5", default-features = false, features = [
    "mp3", "flac", "ogg", "aac", "wav", "aiff", "isomp4",
    "symphonia-codec-vorbis", "symphonia-format-ogg",
] }
rustfft   = "6"
ebur128   = "0.1"
rayon     = "1"
tauri-plugin-drag = "2.1.1"
# Live-слежение за папками плеера (ReadDirectoryChangesW на Windows).
notify    = "8"
# Чистый DSP-крейт нативного рерайта; analyzer.rs — тонкая Tauri-обёртка над ним.
flapp-dsp = { path = "../native/flapp-dsp" }

[profile.dev]
debug = 0
incremental = false
# DSP-циклы самого крейта (STFT, пики, автокорреляция) без оптимизаций были
# в ~10–30 раз медленнее; уровень 1 даёт почти всю скорость при быстрой сборке.
opt-level = 1

# Зависимости (symphonia-декодеры, rustfft) делают основную тяжёлую работу
# анализа и пересобираются один раз — им полный opt.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
# Было "s" (минимальный размер): для аудио-DSP скорость важнее пары сотен КБ.
opt-level = 3
strip = true
