[package]
name = "flapp-app"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0.0"
eframe = "0.35.0"
egui = "0.35.0"
egui_extras = "0.35.0"
flapp-audio = { version = "0.1.0", path = "../flapp-audio" }
flapp-dsp = { version = "0.1.0", path = "../flapp-dsp" }
png = "0.18.1"
rayon = "1.12.0"
regex = "1.13.1"
rfd = "0.17.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sevenz-rust2 = "0.21.3"
zip = "8.6.0"
