[package]
name = "flapp-dsp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", default-features = false, features = [
    "mp3", "flac", "ogg", "aac", "wav", "aiff", "isomp4",
    "symphonia-codec-vorbis", "symphonia-format-ogg",
] }
rustfft = "6"

[dev-dependencies]
rayon = "1"
